--- a/index.html
+++ b/index.html
@@ -8,6 +8,38 @@
         <title>Weather Report</title>
     </head>
     <body>
+        <h1>Dashboard</h1>
+            <div class="container-fluid mainCon">
+                <div class="row">
+                    <div class="col-12 col-md-3 col-xl-3 colOne">
+                        <label>Enter City Name:</label>
 
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control textIn" placeholder="Denver...">
+                            <div class="input-group-append btnPar">
+                                <button class="btn btn-primary search" type="button" id="button-addon2"><i class="fas fa-search"></i></button>
+                            </div>
+                        </div>
+
+                        <div class="container citHit"></div>
+
+                    </div>
+                    <div class="col-12 col-md-9 col-xl-9 colTwo">
+
+                        <div class="row today">
+
+                            <div class="card bg-light mb-3 " style="max-width: 400px;">
+                                <h2 class="card-header cityName"></h2>
+                                <h3 class="card-header currDate"></h3>
+                                <img class="icons"/>
+                                <div class="card-body bodToday">
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="row forecast"></div>
+                </div>
+            </div>
     </body>
 </html>
